[package]
name = "test-arm-musl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full", "macros"] }
warp = "0.3"
#hyper = "0.14"
#openssl = { version = "0.10", features = ["vendored"] }
rocket = "0.5.0-rc.1"
